# owasp_examples_and_poc

./: README.md
sql_injection/: README.md  docker-compose.yml  server.py
sql_injection/static/: styles.css
ssrf/: Cargo.toml  Dockerfile  Dockerfile-optimize  README.md  Rocket.toml
ssrf/src/: main.rs
ssrf/src/routes/: gallery_route.rs  mod.rs  not_found_route.rs  photo_upload_route.rs
ssrf/src/service/: boxed_error.rs  mod.rs
ssrf/static/: styles.css
xss/: Dockerfile  README.md  docker-compose.yml  server.py
xss/static/: styles.css
