[package]
name = "ssrf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.22"
serde = "1.0.193"

[dependencies.rocket]
features = ["json", "uuid"]
version = "0.5.0"

[dependencies.uuid]
version = "1"
features = ["v4"]
